# mp3-loop

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: main.h
src/: main.c
